--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "next",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^1.1.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
+    "redux-form-validators": "^2.3.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0"
   },
