--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "redux-form": "^7.2.0",
     "redux-form-validators": "^2.3.2",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "semantic-ui-css": "^2.2.14",
+    "semantic-ui-react": "^0.77.2"
   },
   "scripts": {
     "start": "react-scripts start",
