--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "enzyme-adapter-react-16": "^1.1.1"
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest-localstorage-mock": "^2.2.0"
   }
 }
