--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "precommit": "lint-staged",
+    "prettier": "prettier --single-quote --write 'src/**/*.{js,jsx,json,css}'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
