--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "^1.1.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
