--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "jwt-decode": "auth0/jwt-decode",
     "lint-staged": "^7.0.0",
     "prettier": "^1.10.2",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-intl": "^2.4.0",
+    "react-intl-redux": "^0.7.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
